# python-turbine-blade-designer

./: .gitignore  Blade.py  FreeCAD_blade_macro.py  README.md  blade_design.py  build_shape.py  config.yaml  estimate_forces.py  main.py  optimization.py  plots.py  pyproject.toml
foil_data/NACA0018/: polar.csv  shape.csv
foil_data/NACA4418/: shape.csv
foil_data/circle/: gen_shape.py  polar.csv
src/python_turbine_blade_designer/: __init__.py  __main__.py  optimization.py  plots.py
src/python_turbine_blade_designer/datastructures/: __init__.py  blade.py  blade_section.py  blade_stem.py  environment.py
src/python_turbine_blade_designer/foil_data/NACA0018/: shape.csv
src/python_turbine_blade_designer/foil_data/NACA4418/: shape.csv
src/python_turbine_blade_designer/foil_data/circle/: shape.csv
